section4/SIMPLE/nginx-app/generic-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: "web-deployment"
 labels:
    app:  "web" 
    sidecar.istio.io/inject : "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "web"     
  template:
    metadata:
      labels:
        app: "web" 
        sidecar.istio.io/inject : "true"  
    spec:      
      containers:        
        - name: "web"         
          image: "nginx:alpine"  
          resources:
            requests:              
              cpu: "50m"            
              memory: "128Mi"
            limits:  
              cpu: "100m"    
              memory: "200Mi" 
          ports:            
            - name: http
              containerPort: 80
              protocol: TCP 
          volumeMounts:  
           - name: nginx-config-volume
             mountPath: /etc/nginx/conf.d/default.conf
             subPath: default.conf          
      volumes:
       - name: nginx-config-volume
         configMap:
          name: nginx-config
