section4/SIMPLE/nginx-app/generic-chart/templates/istio-gateway.yaml
---
# Source: generic-chart/templates/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
   name: web-gateway   
   namespace: web-apps
spec:
  selector:
      istio: ingressgateway
  servers:
    - port:  
        number: 443
        name: https    
        protocol: HTTPS   
      tls:
        mode: SIMPLE 
        credentialName: my-web-app-credential # Référence le Secret Kubernetes 
      hosts:
        - "web.domain.com"
